--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
     <meta property="og:title" content="My Bucket List" />
     <meta property="og:description" content="A test website for LearningX" />
-    <meta property="og:image" content="{{ url_for('static', filename='0012.jpg') }}" />
+    <meta property="og:image" content="{{ url_for('static', filename='jjk.jpg') }}" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
